@@ -8,6 +8,8 @@ All changes by Steve Purkis, unless otherwise noted.
 	pre-formatted text.
     +	fixed RT #43871: missing dep on File::Temp 0.17
 	[reported by Paddy Newman]
+    +	fixed RT #37983: CSS and JS Paths on Win32 get mangled
+	and documented solution. [reported by Chris Davaz]
 
 0.07
     +	you can now specify an output file for the HTML to be written to!
